# ykt_openmp

libomptarget/: CMakeLists.txt  Makefile  tips.txt
libomptarget/cmake/Modules/: LibomptargetGetDependencies.cmake
libomptarget/deviceRTLs/: Makefile
libomptarget/deviceRTLs/amdgcn/: CMakeLists.txt  Makefile
libomptarget/deviceRTLs/amdgcn/src/: Intrinsic.cl  cancel.cl  counter_group.h  counter_groupi.h  critical.cl  debug.cl  debug.h  interface.h  libcall.cl  loop.cl  loopdi.h  loopi.h  omptarget-hsail.cl  omptarget-hsail.h  omptarget-hsaili.h  option.h  parallel.cl  reduction.cl  stdio.cl  support.h  supporti.h  sync.cl  task.cl
libomptarget/deviceRTLs/amdgcn/test/: Makefile  cmd  driver.cl  driver.cpp
libomptarget/deviceRTLs/nvptx/: CMakeLists.txt  Makefile
libomptarget/plugins/: CMakeLists.txt  Makefile
libomptarget/plugins/cuda/: Makefile
libomptarget/plugins/generic-elf-64bit/src/: rtl.cpp
libomptarget/plugins/hsa/: CMakeLists.txt  Makefile
libomptarget/plugins/hsa/src/: elf_utils.c  elf_utils.cpp  elf_utils.h  rtl.cpp
libomptarget/plugins/x86_64/: Makefile
libomptarget/src/: omptarget.cpp  omptarget.h
